Adding temp changes to github

--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -15,9 +15,14 @@
 
     <body>
     <!-- Remove this line the first time you edit this file -->
-     This is the index page of your Django app!
+    <!--This is the index page of your Django app!-->
     <!--Add a nav bar here -->
-
+       <nav>
+           <a href="/templates/djangoapp/">HTML Templat</a>
+       </nav>
+       <div>
+          
+       </div>
     <!--Add a dealer table here -->
 
     </body>
