adding temp changes to github

--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -15,14 +15,31 @@
 
     <body>
     <!-- Remove this line the first time you edit this file -->
-    <!--This is the index page of your Django app!-->
+      <!--This is the index page of your Django app!-->
     <!--Add a nav bar here -->
-       <nav>
-           <a href="/templates/djangoapp/">HTML Templat</a>
-       </nav>
-       <div>
-          
-       </div>
+    <nav class="navbar navbar-light bg-light">
+        <div class="navbar-header">
+            Dealership Review
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+            {% if user.is_authenticated %}
+            <li>
+                 <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                 <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+            </li>
+            {% else %}
+            <li>
+                <form class="form-inline" action="login/" method="post">
+                    {% csrf_token %}
+                    <input type="text" class="form-control" placeholder="Username" name="username" >
+                    <input type="password" class="form-control" placeholder="Password" name="psw" >
+                    <button class="btn btn-primary" type="submit">Login</button>
+                    <a class="btn btn-link" href="">Sign Up</a>
+                </form>
+            </li>
+            {% endif %}
+        </ul>    
+    </nav>
     <!--Add a dealer table here -->
 
     </body>
